--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,53 @@
-baseurl = "http://replace-this-with-your-hugo-site.com/"
+baseurl = "http://example.com/"
+theme = "hugo-geo"
+
+relativeURLs = false
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "~~"
+disqusShortname = "shortcode-here"
+paginate = 5
+
+[taxonomies]
+	tag = "tags"
+	tutorial = "tutorials"
+
+[params]
+	showglobe = true
+
+	favicon = "favicon.ico"
+	
+	analytics = "code-here"
+
+	email = "rickithadi@gmail.com"
+
+	profilepic = "img/profile.png"
+	
+	title = "Hadi Rickit"
+	subtitle = "a blog thing"
+
+	# Social buttons for sidebar
+	# Each of these are optional
+	[[params.socialbuttons]]
+	faicon = "github"
+	url = "https://github.com/rickithadi"
+	[[params.socialbuttons]]
+	faicon = "instagram"
+	url = "https://twitter.com/alexanderurq"
+	[[params.socialbuttons]]
+	faicon = "linkedin"
+	url = "https://linkedin.com"
+	[[params.socialbuttons]]
+	faicon = "google-plus"
+	url = "https://plus.google.com/rickithadi"
+
+	[[params.navlinks]]
+	name = "About"
+	url = "about"
+	
+	[[params.navlinks]]
+	name = "Blog"
+	url = ""
+	
+	[[params.navlinks]]
+	name = "media??"
+	url = "tutorial/"
