--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = https://rickithadi.github.io/rickithadi/""
+baseurl ="https://rickithadi.github.io/rickithadi/"
 theme = "minimal"
 
 relativeURLs = false
