--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl ="https://rickithadi.github.io/rickithadi/"
-theme = "minimal"
+theme = "hugo-geo"
 
 relativeURLs = false
 languageCode = "en-us"
